하단바 추가, 프레그먼트 재설정

--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/home"
+        android:id="@+id/nfc"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="홈" />
+        android:title="NFC" />
+    <item
+        android:id="@+id/announce"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="공지사항" />
     <item
         android:id="@+id/myInfo"
         android:icon="@drawable/ic_account_circle_black_24dp"
-        android:title="내 정보" />
+        android:title="체크리스트" />
     <item
         android:id="@+id/userList"
         android:icon="@drawable/ic_group_black_24dp"
-        android:title="사용자 목록" />
+        android:title="설정" />
 </menu>
