--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".fragment.nfcFragment">
 
     <include
@@ -10,8 +11,62 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-<androidx.recyclerview.widget.RecyclerView
+        <Spinner
+            android:id="@+id/building_spinner"
+            android:layout_width="109dp"
+            android:layout_height="38dp"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/spinner_bg"
+            android:entries="@array/building"
+
+            />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <Spinner
+            android:id="@+id/unit_spinner"
+            android:layout_width="109dp"
+            android:layout_height="38dp"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/spinner_bg"
+            android:entries="@array/unit" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/AdminButton"
+            android:layout_width="63dp"
+            android:layout_height="wrap_content"
+            android:text="관리자" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/searchButton"
+            android:layout_width="67dp"
+            android:layout_height="wrap_content"
+            android:text="검색" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recyclerView"
@@ -19,9 +74,6 @@
     android:layout_height="match_parent"
     tools:context=".fragment.AnnounceFragment"
     android:layout_below="@id/toolbar">
+    </androidx.recyclerview.widget.RecyclerView>
 
-
-
-</androidx.recyclerview.widget.RecyclerView>
-
-</RelativeLayout>
+</LinearLayout>
