--- a/app/src/main/res/layout/item_user_list.xml
+++ b/app/src/main/res/layout/item_user_list.xml
@@ -29,10 +29,11 @@
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:layout_weight="30">
 
             <TextView
                 android:id="@+id/nameTextView"
@@ -49,6 +50,21 @@
                 android:layout_height="wrap_content"
                 tools:text="경기도" />
         </LinearLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/authbtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="5dp"
+            app:cardCornerRadius="15dp">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:src="@drawable/ic_more_vert_black_24dp" />
+        </androidx.cardview.widget.CardView>
+
 
     </LinearLayout>
 
