--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/nfc"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="NFC" />
+<!--    <item-->
+<!--        android:id="@+id/nfc"-->
+<!--        android:icon="@drawable/ic_home_black_24dp"-->
+<!--        android:title="NFC" />-->
     <item
         android:id="@+id/announce"
         android:icon="@drawable/ic_home_black_24dp"
@@ -11,9 +11,9 @@
     <item
         android:id="@+id/myInfo"
         android:icon="@drawable/ic_account_circle_black_24dp"
-        android:title="체크리스트" />
+        android:title="세대인증" />
     <item
         android:id="@+id/userList"
         android:icon="@drawable/ic_group_black_24dp"
-        android:title="설정" />
+        android:title="세대관리" />
 </menu>
